- Fixed view grid.

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -49,7 +49,7 @@
  * relatively abstract molecules and organisms by applying some layout rules.
  */
 @import 'templates/login';
-@import 'templates/board';
+@import 'templates/game';
 @import 'templates/profile';
 @import 'templates/friends';
 @import 'templates/rating';
