--- a/resources/scss/templates/_friends.scss
+++ b/resources/scss/templates/_friends.scss
@@ -9,22 +9,27 @@
   grid-template-areas:
   "header"
   "main"
-  "footer"
-}
+  "footer";
 
-.header {
-  grid-area: header;
-}
+  .header {
+    grid-area: header;
+  }
 
-.main {
-  grid-area: main;
-}
+  .main {
+    align-items: center;
+    display: flex;
+    grid-area: main;
+    justify-content: center;
+    min-height: 60vh;
+    text-align: center;
+  }
 
-.footer {
-  grid-area: footer;
-}
+  .footer {
+    grid-area: footer;
+  }
 
-h1 {
-  color: $color-white;
-  text-align: center;
+  h1 {
+    color: $color-white;
+    text-align: center;
+  }
 }
