--- a/resources/scss/organisms/_footer.scss
+++ b/resources/scss/organisms/_footer.scss
@@ -1,6 +1,9 @@
 .footer {
+  align-items: center;
+  display: flex;
+  height: 100px;
+  justify-content: center;
   text-align: center;
-  margin-top: 60px;
 
   p {
     color: $color-white;
