--- a/resources/scss/templates/_login.scss
+++ b/resources/scss/templates/_login.scss
@@ -7,32 +7,33 @@
   display: grid;
   grid-gap: 20px;
   grid-template-areas:
-    "main"
-    "footer"
-}
+  "main"
+  "footer";
 
-.main {
-  grid-area: main;
-}
 
-.footer {
-  grid-area: footer;
-}
-
-.logo {
-  width: 180px;
-  margin: 80px auto;
-
-  img {
-    width: 100%;
+  .main {
+    grid-area: main;
   }
-}
 
-.card {
-  background-color: $color-white;
-  box-shadow: 0 3rem 5rem -2rem rgba($color-black, .3);
-  margin: auto;
-  position: relative;
-  z-index: 3;
+  .footer {
+    grid-area: footer;
+  }
+
+  .logo {
+    width: 180px;
+    margin: 80px auto;
+
+    img {
+      width: 100%;
+    }
+  }
+
+  .card {
+    background-color: $color-white;
+    box-shadow: 0 3rem 5rem -2rem rgba($color-black, .3);
+    margin: auto;
+    position: relative;
+    z-index: 3;
+  }
 }
 
