--- a/resources/scss/organisms/_header.scss
+++ b/resources/scss/organisms/_header.scss
@@ -7,11 +7,18 @@
     margin: auto;
     width: $content-width-default;
 
+    @include tablet() {
+      flex-direction: column;
+      padding: 20px 0;
+      width: 100%;
+    }
+
     .header__logo {
       align-items: center;
       display: flex;
       flex-basis: 20%;
       justify-content: center;
+      min-width: 180px;
       width: 20%;
 
       .header__logoImage {
