--- a/resources/scss/molecules/_card.scss
+++ b/resources/scss/molecules/_card.scss
@@ -1,12 +1,14 @@
 .card {
   border-radius: $border-radius-card;
   box-shadow: 0 3rem 5rem -2rem rgba($color-black, .4);
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding: 40px;
   text-align: left;
   width: 100%;
+  margin: auto;
 
   &--border {
     border-right: 2px solid $color-yellow;
