--- a/resources/scss/templates/_game.scss
+++ b/resources/scss/templates/_game.scss
@@ -5,10 +5,20 @@
   margin: 0 auto;
   display: grid;
   grid-gap: 100px;
+  grid-auto-columns: auto;
   grid-template-areas:
   "header header header"
   "sidebar main aside"
   "footer footer footer";
+
+  @include tablet() {
+    grid-gap: 0;
+    grid-template-areas:
+    "header header "
+    "sidebar aside"
+    "main main"
+    "footer footer";
+  }
 
   .header {
     grid-area: header;
@@ -25,10 +35,22 @@
     margin: 40px;
     padding: 0 40px;
 
+    @include tablet() {
+      margin: 20px 10px;
+    }
+
     .sidebar__item {
       font-size: $font-large;
       margin: 20px 0;
     }
+  }
+
+  game-board {
+    align-items: left;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
   }
 
   .aside {
@@ -42,7 +64,11 @@
     margin: 40px;
     padding: 0 40px;
 
-    .sidebar__item {
+    @include tablet() {
+      margin: 20px 10px;
+    }
+
+    .aside__item {
       font-size: $font-large;
       margin: 20px 0;
     }
@@ -50,23 +76,27 @@
 
   .main {
     grid-area: main;
-    height: 70vh;
 
     table {
       border-spacing: 0;
       box-shadow: 0 3rem 5rem -2rem rgba($color-black, .4);
       margin: auto;
+      background-color: $color-white;
 
       td {
         width: 20px;
         height: 20px;
+
+        @include tablet() {
+          width: 10px;
+          height: 10px;
+        }
       }
     }
   }
 
   .aside {
     grid-area: aside;
-    height: 70vh;
   }
 
   .footer {
