--- a/resources/scss/templates/_login.scss
+++ b/resources/scss/templates/_login.scss
@@ -5,14 +5,19 @@
   min-height: 100vh;
   margin: 0 auto;
   display: grid;
-  grid-gap: 20px;
+  grid-gap: 100px;
+  grid-auto-columns: 100%;
   grid-template-areas:
-  "main"
-  "footer";
+    "main"
+    "footer";
 
+  @include tablet() {
+    grid-gap: 0;
+  }
 
   .main {
     grid-area: main;
+    flex-direction: column;
   }
 
   .footer {
@@ -22,6 +27,10 @@
   .logo {
     width: 180px;
     margin: 80px auto;
+
+    @include tablet() {
+      margin: 20px auto;
+    }
 
     img {
       width: 100%;
