--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -20,6 +20,7 @@
  * aspects of an interface like animations.
  */
 @import 'atoms/typography';
+@import 'atoms/tooltip';
 @import 'atoms/inputs';
 @import 'atoms/buttons';
 
