--- a/resources/scss/templates/_settings.scss
+++ b/resources/scss/templates/_settings.scss
@@ -35,6 +35,80 @@
     .card {
       background-color: $color-white;
     }
+
+
+    .colors {
+      list-style: none;
+      padding: 0;
+
+      .colors__item {
+        display: inline-block;
+
+        .colors__itemColor {
+          background-color: $color-green;
+          border-radius: 50%;
+          cursor: pointer;
+          display: block;
+          height: 42px;
+          line-height: 42px;
+          margin: 0;
+          overflow: hidden;
+          position: relative;
+          text-align: center;
+          text-indent: -9999px;
+          width: 42px;
+
+          &:after {
+            color: $color-white;
+            content: '✓';
+            display: block;
+            font-size: $font-large;
+            height: 100%;
+            opacity: 0;
+            position: absolute;
+            text-indent: 0;
+            top: 0;
+            width: 100%;
+            will-change: opacity;
+          }
+        }
+
+        [for='colorRed'] {
+          background-color: $color-red;
+        }
+
+        [for='colorBlue'] {
+          background-color: $color-blue;
+        }
+
+        [for='colorGreen'] {
+          background-color: $color-green;
+        }
+
+        [for='colorPink'] {
+          background-color: $color-pink;
+        }
+
+        [for='colorViolet'] {
+          background-color: $color-violet;
+        }
+
+        input {
+          display: none;
+          visibility: hidden;
+
+          &:checked {
+
+            + label {
+
+              &:after {
+                opacity: 1;
+              }
+            }
+          }
+        }
+      }
+    }
   }
 
   .footer {
@@ -44,32 +118,5 @@
   h1 {
     color: $color-white;
     text-align: center;
-  }
-
-  .colors {
-    list-style: none;
-    padding: 0;
-
-    .colors__item {
-      display: inline-block;
-
-      label {
-        background-color: $color-green;
-        border-radius: 50%;
-        cursor: pointer;
-        display: block;
-        height: 45px;
-        line-height: 45px;
-        overflow: hidden;
-        text-align: center;
-        text-indent: -9999px;
-        width: 45px;
-      }
-
-      input {
-        display: none;
-        visibility: hidden;
-      }
-    }
   }
 }
