- Fixed tooltip animation.

--- a/resources/scss/atoms/_tooltip.scss
+++ b/resources/scss/atoms/_tooltip.scss
@@ -58,7 +58,7 @@
 
     &:after {
       bottom: auto;
-      left: 0;
+      left: auto;
       right: 50%;
       top: 50%;
       transform: translate(-50%, -50%) scale(.6, .6);
