--- a/resources/scss/molecules/_form.scss
+++ b/resources/scss/molecules/_form.scss
@@ -7,6 +7,11 @@
     margin-bottom: 20px;
     position: relative;
 
+    svg {
+      position: absolute;
+      height: 44px;
+    }
+
     &:last-child {
       margin-bottom: 0;
     }
