--- a/resources/scss/atoms/_buttons.scss
+++ b/resources/scss/atoms/_buttons.scss
@@ -7,9 +7,9 @@
   display: block;
   float: left;
   font-family: $font-family-default;
-  height: 34px;
+  height: 36px;
   letter-spacing: .4px;
-  line-height: 34px;
+  line-height: 36px;
   margin: 0;
   padding: 0 16px;
   position: relative;
@@ -27,7 +27,7 @@
   }
 
   &--large {
-    font-size: $font-medium ;
+    font-size: $font-medium;
     font-weight: $font-bold;
     height: 60px;
     line-height: 52px;
@@ -35,7 +35,7 @@
   }
 
   &--medium {
-    font-size: $font-medium ;
+    font-size: $font-medium;
     font-weight: $font-bold;
     height: 48px;
     line-height: 40px;
@@ -48,6 +48,15 @@
     height: 40px;
     line-height: 40px;
     padding: 0 14px;
+  }
+
+  &--icon {
+    border-radius: 50%;
+    float: right;
+    font-size: $font-medium;
+    font-weight: $font-light;
+    padding: 0;
+    width: 36px;
   }
 
   @each $key, $values in $buttons {
