--- a/resources/scss/templates/_friends.scss
+++ b/resources/scss/templates/_friends.scss
@@ -27,6 +27,10 @@
     justify-content: center;
     text-align: center;
 
+    #list-friends {
+      margin-bottom: -20px;
+    }
+
     .item {
       align-items: center;
       background-color: $color-white;
@@ -36,80 +40,84 @@
       flex-direction: column;
       justify-content: space-between;
       margin-bottom: 40px;
-      padding: 40px;
+      padding: 40px 20px;
       position: relative;
       width: 100%;
       z-index: 3;
 
       .item__photo {
-       border-radius: 50%;
-       height: 80px;
-       object-fit: cover;
-       overflow: hidden;
-       width: 80px;
-       margin: 0 auto;
-
-       img {
-        object-fit: cover;
-        width: 100%;
-      }
-
-      span {
-        background-color: currentColor;
         border-radius: 50%;
-        border: 8px solid $color-white;
-        height: 20px;
-        left: 60px;
-        position: absolute;
-        right: 0;
-        top: 100px;
-        width: 20px;
-        margin: auto;
-      }
-    }
+        height: 80px;
+        object-fit: cover;
+        overflow: hidden;
+        width: 80px;
+        margin: 0 auto;
 
-    .item__content {
-      flex-basis: 80%;
-      margin: 20px 0;
-      width: 80%;
+        img {
+          object-fit: cover;
+          width: 100%;
+        }
 
-      .item__name {
-        @include typography($font-large, $font-bold);
-        color: $color-text-default;
-      }
-
-      .item__mail {
-        @include typography($font-medium, $font-thin);
-        color: $color-pink;
-        font-family: $font-family-default;
+        span {
+          background-color: currentColor;
+          border-radius: 50%;
+          border: 8px solid $color-white;
+          height: 20px;
+          left: 60px;
+          position: absolute;
+          right: 0;
+          top: 100px;
+          width: 20px;
+          margin: auto;
+        }
       }
 
-      .item__history {
-        @include typography($font-small, $font-normal);
-        font-family: $font-family-default;
-        color: lighten($color-black , 80%);
-        margin-top: 10px;
-      }
-    }
+      .item__content {
+        margin: 20px 0;
+        width: 100%;
 
-    .item__options {
-      display: flex;
-      justify-content: space-between;
-      width: 100%;
+        .item__name {
+          @include typography($font-large, $font-bold);
+          color: $color-text-default;
+          text-transform: capitalize;
+        }
+
+        .item__mail {
+          @include typography($font-small, $font-thin);
+          color: $color-pink;
+          text-decoration: none;
+        }
+
+        .item__history {
+          @include typography($font-small, $font-normal);
+          font-family: $font-family-default;
+          color: lighten($color-black , 80%);
+          margin-top: 10px;
+        }
+      }
+
+      .item__options {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+
+        .button {
+          margin: 4px;
+        }
+      }
     }
   }
-}
 
-.footer {
-  grid-area: footer;
-}
-
-h1 {
-  color: $color-white;
-  text-align: center;
-
-  @include tablet() {
-    font-size: $font-xx-large;
+  .footer {
+    grid-area: footer;
   }
-}
+
+  h1 {
+    color: $color-white;
+    text-align: center;
+
+    @include tablet() {
+      font-size: $font-xx-large;
+    }
+  }
 }
