--- a/src/scss/atoms/_tooltip.scss
+++ b/src/scss/atoms/_tooltip.scss
@@ -18,9 +18,7 @@
     text-align: center;
     text-transform: none;
     transform: none;
-    transition: opacity .1s ease-in-out,
-    visibility .2s ease-in-out,
-    transform .2s cubic-bezier(0.31, 0.68, 0.79, 1.15);
+    transition: opacity .1s ease-in-out, visibility .2s ease-in-out, transform .2s cubic-bezier(0.31, 0.68, 0.79, 1.15);
     visibility: hidden;
     z-index: 1000;
   }
