- Updated User class to save date history.

--- a/src/scss/utilities/_helpers.scss
+++ b/src/scss/utilities/_helpers.scss
@@ -13,3 +13,11 @@
 .mb--0 {
     margin-bottom: 0 !important;
 }
+
+.size-100 {
+    font-size: 100px;
+}
+
+.color-white {
+    color: $color-white;
+}
