--- a/src/scss/molecules/_nav.scss
+++ b/src/scss/molecules/_nav.scss
@@ -13,7 +13,7 @@
 
   &__item {
 
-    &Link {
+    &-link {
       color: $color-darkblue;
       display: block;
       font-size: $font-small;
@@ -26,7 +26,7 @@
 
     &--active {
 
-      .nav__itemLink {
+      .nav__item-link {
         color: $color-salmon;
       }
     }
