--- a/src/scss/utilities/_variables.scss
+++ b/src/scss/utilities/_variables.scss
@@ -7,6 +7,7 @@ $color-orange    : #ff974e;
 $color-red       : #ff4d63;
 $color-salmon    : #f86755; // New
 $color-pink      : #DF1070;
+$color-darkgrey  : #424242; // New
 $color-violet    : #6F1EFB;
 $color-blue      : #10A9E7;
 $color-darkblue  : #072c61; // New
