--- a/src/scss/atoms/_buttons.scss
+++ b/src/scss/atoms/_buttons.scss
@@ -6,7 +6,7 @@
   cursor: pointer;
   display: block;
   float: left;
-  font-family: $font-family-default;
+  font-family: $font-family-base;
   height: 36px;
   letter-spacing: .4px;
   line-height: 36px;
