- Added class to button on loading.

--- a/src/scss/atoms/_buttons.scss
+++ b/src/scss/atoms/_buttons.scss
@@ -63,6 +63,11 @@
     }
   }
 
+  &--is-loading {
+    opacity: .5;
+    pointer-events: none;
+  }
+
   @each $key, $values in $buttons {
 
     &--#{$key} {
