--- a/src/scss/templates/_game.scss
+++ b/src/scss/templates/_game.scss
@@ -79,11 +79,30 @@
       font-size: $font-medium;
       margin: 20px 0;
       text-align: center;
+      text-transform: uppercase;
       width: 100%;
-      font-weight: $font-extra-bold;
+
+      &--level {
+
+        * {
+          color: $color-salmon;
+          display: block;
+          font-size: $font-xx-large * 2;
+          font-weight: $font-extra-bold;
+          width: 100%;
+        }
+      }
 
       &--icon {
         font-size: $font-xxx-large * 2;
+      }
+
+      &--time {
+        color: $color-salmon;
+        display: block;
+        font-size: $font-x-large * 2;
+        font-weight: $font-extra-bold;
+        width: 100%;
       }
     }
   }
